--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,13 +1,34 @@
 editor: visual
-
+version: 0.1.1
+status: Draft for review and feedback
+author:
+  name: Madoc Alder Marshall
+  affiliation:
+    name: Association of State and Territorial Health Officials
+    url: www.astho.org
 affiliations: []
 brand: "brand.yml"
+author-meta: Madoc Alder Marshall
+description: "This guide was created to support KY in developing accessible data visualization color palettes for their larger data viz style guide ([PHIG TA Request #55967](https://asth0.monday.com/boards/4480495811/pulses/9955136601)). The urgency of this work is driven by the U.S. Department of Justice's **2026 deadline** for state and local governments to comply with updated ADA Title II rules, which mandate WCAG 2.1 AA conformance for all digital content. Our goal is to provide KY with an actionable framework to build accessible color systems that follow accessibility best practices. This document also serves as a foundational model for a broader, proactive TA resource on developing fully accessible and compliant data viz style guides."
+title-meta: "Designing with Color for Inclusive and Effective Data Visualization"
+date: last-modified
+published-title: 'Last Updated:'
 resources:
   - static
   - images
 lightbox: true
+custom-callout:
+  context:
+    icon: false
+    appearance: "minimal"
+filters:
+- custom-callout
 format:
   html:
+    template-partials:
+      - title-metadata.html
+      - title-block.html
+
     comments:
       hypothesis: true
     grid:
